--- a/AppLifeCheck/MainWindow.xaml
+++ b/AppLifeCheck/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AppLifeCheck"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="App Life Checker" Height="450" Width="800">
     <Grid>
         <TreeView x:Name="Treeb" Loaded="Tree_Loaded" Margin="0,48,0,0"/>
         <Label x:Name="PCTime" Content="Label" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Loaded="PCTime_Loaded"/>
